--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,9 +53,12 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 
+  assets:
+    - assets/images/
+
   fonts:
     - family: Nunito
-      fonts:
+      fonts: 
         - asset: assets/fonts/Nunito-Regular.ttf
           weight: 400
         - asset: assets/fonts/Nunito-Light.ttf
